@@ -1,11 +1,0 @@
-@prefix eg: <http://example.org/> .
-
-eg:s
-	eg:p1 [
-		== <http://example.com/vocab#SomeClass> ;
-		eg:name "object"
-	] ;
-	eg:p2 [
-		== eg:o ;
-		eg:name "o"
-	] .
